--- a/app/src/main/res/layout/activity_tracking_screen.xml
+++ b/app/src/main/res/layout/activity_tracking_screen.xml
@@ -14,7 +14,7 @@
         android:layout_height="87dp"
         android:fontFamily="@font/prompt"
         android:gravity="center"
-        android:text="TextView"
+        android:text="0.00 MPH"
         android:textAlignment="center"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         android:layout_height="87dp"
         android:fontFamily="@font/prompt"
         android:gravity="center"
-        android:text="TextView"
+        android:text="PlaceHolder"
         android:textAlignment="center"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,7 +46,7 @@
         android:layout_height="96dp"
         android:fontFamily="@font/prompt"
         android:gravity="center"
-        android:text="TextView"
+        android:text="0.00"
         android:textAlignment="center"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -86,7 +86,7 @@
         android:layout_height="96dp"
         android:fontFamily="@font/prompt"
         android:gravity="center"
-        android:text="TextView"
+        android:text="00:00"
         android:textAlignment="center"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
