--- a/app/src/main/res/layout/activity_collection_sticker_wall.xml
+++ b/app/src/main/res/layout/activity_collection_sticker_wall.xml
@@ -77,7 +77,7 @@
         android:id="@+id/A11"
         android:layout_width="52dp"
         android:layout_height="52dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="53dp"
         android:layout_marginTop="40dp"
         android:onClick="showStickerDescription"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
         android:id="@+id/A41"
         android:layout_width="52dp"
         android:layout_height="52dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="53dp"
         android:layout_marginTop="40dp"
         android:onClick="showStickerDescription"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +154,7 @@
         android:id="@+id/A21"
         android:layout_width="52dp"
         android:layout_height="52dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="53dp"
         android:layout_marginTop="40dp"
         android:onClick="showStickerDescription"
         app:layout_constraintStart_toStartOf="parent"
@@ -187,7 +187,7 @@
         android:id="@+id/A31"
         android:layout_width="52dp"
         android:layout_height="52dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="53dp"
         android:layout_marginTop="40dp"
         android:onClick="showStickerDescription"
         app:layout_constraintStart_toStartOf="parent"
@@ -220,7 +220,7 @@
         android:id="@+id/A01"
         android:layout_width="52dp"
         android:layout_height="52dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="53dp"
         android:layout_marginTop="128dp"
         android:onClick="showStickerDescription"
         app:layout_constraintStart_toStartOf="parent"
@@ -234,21 +234,24 @@
         android:backgroundTint="@color/darkBlue"
         android:text="Sticker Wall"
         app:layout_constraintBottom_toBottomOf="@+id/topvarSW"
-        app:layout_constraintEnd_toStartOf="@+id/button6"
-        app:layout_constraintStart_toStartOf="@+id/topvarSW"
-        app:layout_constraintTop_toTopOf="@+id/topvarSW" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.164"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/topvarSW"
+        app:layout_constraintVertical_bias="1.0" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/topvarSW"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="64dp"
         android:background="@color/lightBlue"
         android:fontFamily="@font/prompt"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -256,14 +259,16 @@
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="126dp"
         android:backgroundTint="@color/darkBlue"
         android:fontFamily="@font/prompt"
         android:onClick="goToDiscRackScreen"
         android:text="Disc Rack"
         app:layout_constraintBottom_toBottomOf="@+id/topvarSW"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/topvarSW" />
+        app:layout_constraintHorizontal_bias="0.789"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/topvarSW"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -272,12 +277,12 @@
         android:clickable="true"
         android:contextClickable="false"
         android:onClick="goBack"
-        app:layout_constraintBottom_toBottomOf="@+id/topvarSW"
-        app:layout_constraintEnd_toEndOf="@+id/topvarSW"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toEndOf="@+id/button6"
-        app:layout_constraintTop_toTopOf="@+id/topvarSW"
-        app:layout_constraintVertical_bias="0.714"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023"
         app:srcCompat="@drawable/previous_icon"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -288,6 +293,7 @@
         android:layout_marginBottom="48dp"
         android:background="@color/lightBlue"
         android:text="Description Here..."
+        android:fontFamily="@font/prompt"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
