--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="23sp"
-    android:textColor="@color/black"
+    android:textColor="#546E7A"
     android:fontFamily="@font/prompt"
     android:padding="5dip"
     android:textAlignment="center"
