--- a/app/src/main/res/layout/activity_tracking_screen.xml
+++ b/app/src/main/res/layout/activity_tracking_screen.xml
@@ -12,6 +12,7 @@
         android:id="@+id/tvSpeed"
         android:layout_width="171dp"
         android:layout_height="87dp"
+        android:textColor="@color/black"
         android:fontFamily="@font/prompt"
         android:gravity="center"
         android:text="0.00 MPH"
@@ -30,6 +31,7 @@
         android:layout_height="87dp"
         android:fontFamily="@font/prompt"
         android:gravity="center"
+        android:textColor="@color/black"
         android:text="PlaceHolder"
         android:textAlignment="center"
         android:textSize="25dp"
@@ -43,6 +45,7 @@
     <TextView
         android:id="@+id/tvDistance"
         android:layout_width="385dp"
+        android:textColor="@color/black"
         android:layout_height="96dp"
         android:fontFamily="@font/prompt"
         android:gravity="center"
@@ -126,10 +129,15 @@
 
     <Chronometer
         android:id="@+id/tvTime"
+        android:textColor="@color/black"
+        android:fontFamily="@font/prompt"
         android:layout_width="385dp"
         android:layout_height="96dp"
         android:ems="10"
+        android:textAlignment="center"
         android:inputType="time"
+        android:textSize="25dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
