--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -84,6 +84,7 @@
         android:layout_height="wrap_content"
         android:onClick="goToRivalScreen"
         android:text="Rival is calling..."
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
